Added endnotes in embedding.tex .

--- a/embedding.tex
+++ b/embedding.tex
@@ -149,7 +149,8 @@ Continuing from above, \cite{claessen2000typed} taps into the advantages of the 
 functional logic programming language.
 This results in typed logical predicates and a backtracking \haskellConstruct{monad} with support for various data
 types and search strategies.
-Though not very efficient nor practical the method aims at a more elegant translation of programs from one language
+Though not very efficient nor practical\yyy{}{\Large,}
+the method aims at a more elegant translation of programs from one language
 to the other.
 While other papers \cite{erwig2004escape} attempt at exercising \progLang{Haskell} features without adding
 anything new rather than doing something new with what is available.\endnote{%
@@ -177,7 +178,15 @@ backtracking abilities and a \haskellConstruct{monadic encapsulation} to turn a 
 
 To replicate \progLang{Prolog}-like
 capabilities \progLang{Haskell} seems to be already in the race\endnote{%
-  Yet another metaphor whose meaning I do not understand in context.
+  Perhaps its the sentence order rather than the metaphor that is the problem here.
+  Does
+  \vspace*{-1\baselineskip}
+  \begin{quote}\slshape
+    With a host of related libraries \progLang{Haskell}
+    seems to be already in the race
+    \textbf{\upshape (or:} seems to be well-positioned\textup{)}
+    to replicate \progLang{Prolog}-like capabilities.
+  \end{quote}
 }
 with a host of related libraries.
 First we begin with the libraries about Prolog\endnote{%
