Changes to hwh.tex .

--- a/hwh.tex
+++ b/hwh.tex
@@ -16,7 +16,9 @@
 %-----------------------------------------------------------------------------
 
 
-In this chapter we discuss the properties of \progLang{Haskell}
+In this chapter we discuss the properties of \progLang{Haskell}\yyy{}{\LARGE.}\endnote{%
+  Fix and remove this footnote.
+}
 
 This chapter discusses the properties of the host language \progLang{Haskell} and mainly the feature set it
 provides for \yyy{embedding domain specific languages(EDSLs)}{embedded
