Changes to multiparadigm.tex .

--- a/multiparadigm.tex
+++ b/multiparadigm.tex
@@ -21,9 +21,7 @@ Let us take an example of the \progLang{Scala} programming language \cite{websit
 object-functional programming language which takes features from each of the two paradigms.
 In this thesis, the languages in question are \progLang{Haskell} and \progLang{Prolog}.
 This section takes a look at the literature on multi paradigm languages, mainly functional logic programming
-languages that combine two of the most widespread declarative programming styles.\endnote{%
-  There are some capitals to look at here.
-}\elabel{capitals}
+languages that combine two of the most widespread declarative programming styles.
 
 A peak into language classification reveals that it is not always a straight forward task to segregate languages
 according to their features and characteristics.
@@ -167,12 +165,11 @@ Only the ones that
 \item
   have been cited or referred by other attempts
 \end{inparaenum}
-have been included, as the list is long and is not the main focus of the thesis.\endnote{%
-  This is a good sentence; but I believe that the changes indicated make it clearer.
+have been included \yyy{}{below}, as the list is long and \xxx{is} not the main focus of the thesis.\endnote{%
+  Make the change and delete this footnote.
+  I believe that adding ``\textsl{below}'' makes this sentence a lot clearer.
 }
-We begin\endnote{%
-  The rewording avoids a sentence fragment.
-}
+We begin
 with the ones from Australia, which seems to be a popular location for fiddling with
 \progLang{Prolog} and merging paradigms.
 As of now there have been three popular ones, beginning with \progLang{Nue Prolog}, \cite{website:nue-prolog},
