David did fix to fixed THROUGHOUT.

--- a/proto1.tex
+++ b/proto1.tex
@@ -428,10 +428,7 @@ difference.
 It means that applying one more \haskellConstruct{FlatTerm} would not change anything --\textsuperscript{,}\endnote{%
   An en-dash is not appropriate here.
 }
-a \textcolor{red}{fix}\endnote{%
-  Spelling!
-}
-point does not move under \haskellConstruct{FlatTerm}.
+a fixed point does not move under \haskellConstruct{FlatTerm}.
 
 \progLang{Haskell} provides it in two forms,\endnote{%
   \david{Why do you need to discuss value fixed points (\textit{i.e.,} \texttt{\bfseries fix})?  Do you need them?} 
