removed an endnote from proto2.tex .

--- a/proto2.tex
+++ b/proto2.tex
@@ -97,9 +97,7 @@ Nonetheless, the library has the following major components:
 
 \item Unifier.
 
-\item Read-Eval-Print Loop (REPL).\endnote{%
-  Fix the preceding space.
-}
+\item Read-Eval-Print Loop (REPL).
 \end{enumerate}
 
 To prove the modularity of the approach for language modification and monadic unification only the abstract syntax
