split code for proto2 to small distinct chunks and added content for the same.

--- a/proto1.tex
+++ b/proto1.tex
@@ -489,7 +489,7 @@ That is use code something like that in Figure~\ref{tab:garfunkle}, and show how
 %% -- end code inserted by David                                   -- %%
 %%====================================================================%%
 
-\Figure~\ref{fig:manual_extension} \Figure~\ref{fig:automatic_extension}
+Figure~\ref{fig:manual_extension} Figure~\ref{fig:automatic_extension}
 
 \begin{figure}
   \includegraphics[width=1\textwidth]{extended_data_type_1.pdf}
